✅ test/KIKI-48 : 도메인 수정에 따른 테스트 코드 수정